--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation 'com.github.getActivity:ShapeView:8.5'
     // 悬浮窗框架：https://github.com/getActivity/XToast
     implementation 'com.github.getActivity:XToast:8.5'
+    implementation "com.kongzue.stacklabel:StackLabel:1.2.0"
 }
