--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
   <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
   <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
+  <uses-permission android:name="android.permission.VIBRATE" />
   <application
       android:allowBackup="false"
       android:icon="@drawable/ic_launcher"
