--- a/UIAppliction_merge_2/MCSP-A2-project-login/app/build.gradle
+++ b/UIAppliction_merge_2/MCSP-A2-project-login/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android' version '1.8.22'
+    id 'com.google.gms.google-services'
 }
 
 configurations.configureEach {
@@ -16,7 +17,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.uiappliction"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
@@ -94,4 +95,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
+//    firebase
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation("com.google.firebase:firebase-auth")
 }
