--- a/UIAppliction_merge_2/MCSP-A2-project-login/local.properties
+++ b/UIAppliction_merge_2/MCSP-A2-project-login/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 01 17:47:57 AEDT 2024
-sdk.dir=C\:\\Users\\10242\\AppData\\Local\\Android\\Sdk
+#Sat Nov 02 18:00:30 AEDT 2024
+sdk.dir=/Users/jocelynjie/Library/Android/sdk
